--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,3 @@
-Vous pouvez retrouver des informations sur moi : <a href="<%= me_path %>">par ici</a> <br><br>
-Ou sur ma team : <a href="<%= stras_path %>">par là</a>
+<h1> Qui sommes nous ?</h1>
+<p>Vous pouvez retrouver des informations sur moi : <a href="<%= me_path %>">par ici</a> </p>
+<p>Ou sur ma <strong>super team </strong>: <a href="<%= stras_path %>">par là</a></p>
