--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,5 @@
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<h1>Contacte moi</h1>
+<ul>
+<li>Mon 06 : 0611223344</li>
+<li>Mon mail : salut@ca.va</li>
+<li>Mon twitter: @cestmoi</li>
