--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,7 @@
 <h2>Bien le bonjour très cher</h2>
 <p>Bienvenue sur ma superbe page rails 😻</p>
+
+Veux-tu en savoir plus sur moi ? <a href="about">  Viens ici</a><br>
+Tu veux me contacter ? <a href="contact">  Viens là</a>
+
+
